# ParSeq-XAS

./: .readthedocs.yaml  LICENSE  PKG-INFO  README.md  pyproject.toml  setup.py
parseq_XAS/: TODO.txt  XAS_fits.py  XAS_nodes.py  XAS_pipeline.py  XAS_start.py  XAS_tests.py  XAS_transforms.py  XAS_widgets.py  __init__.py  version.py
parseq_XAS/data/: fe2o3_15_35.mu  fe2o3_tr2.mu
parseq_XAS/data/HERFD/: 20230318.h5
parseq_XAS/data/foils/FEFF/Co/: feff.inp
parseq_XAS/data/foils/FEFF/Fe/: feff.inp
parseq_XAS/doc/: conf.py  fits.rst  graph.rst  gui.rst  history.rst  howto.rst  icons.rst  index.rst  license.rst  nodes.rst  nogui.rst  rtd_requirements.txt  self-absorption.rst  top.rst  transforms.rst
parseq_XAS/saved/: CeRu2.pspj  CrFeCoCu-foils.pspj  Cu-LCF.pspj  Cu.pspj  Fe2O3_selfAbsorptionCorrection.pspj  HERFDvsTr.pspj
